// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > doctype.html 1`] = `
[
  {
    "column": 1,
    "line": 1,
    "message": "Require doctype",
    "nodeType": null,
    "ruleId": "markup/doctype",
    "severity": 2,
  },
]
`;

exports[`fixtures > empty.html 1`] = `[]`;

exports[`fixtures > id-duplication.html 1`] = `
[
  {
    "column": 1,
    "fix": {
      "range": [
        0,
        144,
      ],
      "text": "<html>head
  <body>
    <div id=\\"a\\">
      <p id=\\"a\\">lorem</p>
    </div>

    <div id=\\"a\\"></div>
    <img id=\\"a\\" src=\\"path/to\\" />
  </body>
</html>",
    },
    "line": 1,
    "message": "Require doctype",
    "nodeType": null,
    "ruleId": "markup/doctype",
    "severity": 2,
  },
]
`;
